--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: Home
 <!-- ========== BIO ========== -->
 <div class="docs-section" id="bio">
   <h4>Bio</h4>
-  <p>My research is in the area of machine learning, and includes contributions in the areas of <b>artificial intelligence in education</b> and <b>educational data mining</b>. He has published over 80 papers in highly ranked conference proceedings, such as NeurIPS, CVPR, AAAI, WWW, etc. and his applied research has resulted in more than 40 technology transfer and patents. </p>
+  <p>My research is in the area of machine learning, and includes contributions in the areas of <b>artificial intelligence in education</b> and <b>educational data mining</b>. I have published 80+ papers in highly ranked conference proceedings and my applied research has resulted in 40+ technology transfer and patents. </p>
 
   <p>I conduct <b>reproducible</b> research. Trained models, datasets and scripts of data preprocessing and model training can be found at <a href="https://www.pykt.org/" target="_blank">pykt.org</a>, <a href="https://github.com/ai4ed/" target="_blank">ai4ed@GitHub</a>, <a href="https://github.com/tal-ai/" target="_blank">tal-ai@GitHub</a>, and <a href="https://github.com/tal-tech/" target="_blank">tal-tech@GitHub</a>.</p>
 
