--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@ title: Home
 
   <p>I conduct <b>reproducible</b> research. Trained models, datasets and scripts of data preprocessing and model training can be found at <a href="https://www.pykt.org/" target="_blank">pykt.org</a>, <a href="https://github.com/ai4ed/" target="_blank">ai4ed@GitHub</a>, <a href="https://github.com/tal-ai/" target="_blank">tal-ai@GitHub</a>, and <a href="https://github.com/tal-tech/" target="_blank">tal-tech@GitHub</a>.</p>
 
+  <p>Before joining <a href="https://ise.jnu.edu.cn/" target="_blank">JNU</a>, I was the CTO of <a href="https://www.thethinkacademy.com/" target="_blank">ThinkAcademy</a>, CTO of <a href="https://www.xesvip.com/" target="_blank">Xueersi 1 on 1</a> and Head of AI Lab at <a href="https://www.100tal.com/" target="_blank">TAL Education Group</a> (NYSE: TAL).</p>
+
 
 <!-- ========== NEWS ========== -->
 <div class="docs-section" id="news">
